--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.App-logo {
+  pointer-events: none;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .question-container {
+  margin: 20px;
+  width: 400px;
+
+}
+
+.App .question-container .input-grp {
+  margin: 5px;
+}
+.App .question-container .option-text {
+   font-size: 16px;
+   text-align: left;
+   font-weight: bold;
+   margin-left: 5px;
+   margin-bottom: 5px;
 }
